# Magister-code

data/: art01.txt  art02.txt  dmc2008_train_medium.txt  dmc2008_train_short.txt  short_normalized.txt  train.txt
src/: CMakeLists.txt
src/cluster/: AbstractMetric.h  Attribute.cpp  Attribute.h  CMakeLists.txt  Cluster.cpp  Cluster.h  DataContainer.cpp  DataContainer.h  EuclidMetric.cpp  EuclidMetric.cpp.orig  EuclidMetric.h  KMeans.cpp  KMeans.h  Object.cpp  Object.h  Regression.h  UPGMA.cpp  UPGMA.h  Upgma.cpp  Upgma.h  clustering.cpp  clustering.h  dbscan.cpp  dbscan.h  nn.cpp  nn.h  validity.cpp  validity.h
src/main/: CMakeLists.txt  Reader.cpp  Reader.h  Regression.cpp  Regression.h  main.cpp
