include_directories (${PROJECT_SOURCE_DIR}/cluster)
add_executable (magister main)

add_library (Reader Reader.cpp)
add_library (Regression Regression.cpp)

target_link_libraries (Reader Object)
target_link_libraries (magister Object)
target_link_libraries (magister Cluster)
target_link_libraries (magister Reader)
target_link_libraries (magister DataContainer)
target_link_libraries (magister KMeans)
target_link_libraries (magister Upgma)
target_link_libraries (magister NN)
target_link_libraries (magister EuclidMetric)
target_link_libraries (magister Clustering)
target_link_libraries (magister Validity)
target_link_libraries (magister DBScan)
